--- a/custom_components/froeling_lambdatronic_modbus/translations/de.json
+++ b/custom_components/froeling_lambdatronic_modbus/translations/de.json
@@ -1075,6 +1075,9 @@
       "boiler_2_nachladen_wenn_boilertemperatur_unter": {
         "name": "Boiler 2 Nachladen wenn Boilertemperatur unter"
       },
+      "boiler_2_solltemperatur_externe_vorgabe": {
+        "name": "Boiler 2 Solltemperatur Externe Vorgabe"
+      },
       "pelletlager_restbestand": {
         "name": "Pelletlager Restbestand"
       },
