--- a/custom_components/froeling_lambdatronic_modbus/translations/de.json
+++ b/custom_components/froeling_lambdatronic_modbus/translations/de.json
@@ -205,6 +205,9 @@
       "abgastemperatur": {
         "name": "Abgastemperatur"
       },
+      "boardtemperatur": {
+        "name": "Boardtemperatur"
+      },
       "verbleibende_heizstunden_bis_zur_asche_entleeren_warnung": {
         "name": "Verbleibende Heizstunden bis zur Asche entleeren Warnung"
       },
@@ -1136,6 +1139,18 @@
       },
       "boiler_2_pumpe_an_aus": {
         "name": "Boiler 2 Pumpe AN/AUS"
+      },
+      "tuerkontakt_an_aus": {
+        "name": "Türkontakt"
+      },
+      "stb_an_aus": {
+        "name": "STB AN/AUS"
+      },
+      "notaus_an_aus": {
+        "name": "NOTAUS AN/AUS"
+      },
+      "kesselfreigabe_an_aus": {
+        "name": "Kesselfreigabe AN/AUS"
       }
     },
     "select": {
