--- a/custom_components/froeling_lambdatronic_modbus/translations/en.json
+++ b/custom_components/froeling_lambdatronic_modbus/translations/en.json
@@ -205,6 +205,9 @@
       "abgastemperatur": {
         "name": "Exhaust Temperature"
       },
+      "boardtemperatur": {
+        "name": "Board Temperature"
+      },
       "verbleibende_heizstunden_bis_zur_asche_entleeren_warnung": {
         "name": "Remaining Heating Hours Until Ash Emptying Warning"
       },
@@ -1136,6 +1139,18 @@
       },
       "boiler_2_pumpe_an_aus": {
         "name": "Boiler 2 Pump ON/OFF"
+      },
+      "tuerkontakt_an_aus": {
+        "name": "Door"
+      },
+      "stb_an_aus": {
+        "name": "Hi-limit stat ON/OFF"
+      },
+      "notaus_an_aus": {
+        "name": "EMERGENCY STOP ON/OFF"
+      },
+      "kesselfreigabe_an_aus": {
+        "name": "Boiler release ON/OFF"
       }
     },
     "select": {
